# agentic-creator-os

./: .agent-harness.json  .gitignore  .mcp.json  ACOS-V5-SPEC.md  ACOS-V6-SPEC.md  AGENTS.md  ANNOUNCEMENT.md  ANNOUNCEMENTS_FINAL.md  ARCHITECTURE.md  AUDIENCE_PERSONAS.md  BRANCH_AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONNECTORS.md  CONTRIBUTING.md  CREATOR.md  CREATOR_NEEDS.md  CREDITS.md  DEPLOYMENT.md  ECOSYSTEM.md  GROK.md  GTM.md  HARNESS.md  OPENCODE_INTEGRATION.md  ORCHESTRATION_PATTERNS.md  PRODUCT.md  PRO_STATUS_DASHBOARD.md  PUBLISH.md  QUICKSTART.md  README.md  RUNBOOK.md  SCHEMA.md  SECURITY.md  SKILLS.md  SKILL_TREE.md  STATS.md  SYSTEM.md  TESTING.md  USAGE_GUIDE.md  (+6 more)
.acos/: .gitignore  sprint.json
.asph-wip/: asph-2026-07-07T23-35-22.patch  asph-2026-07-14T01-32-43.patch  note-2026-07-14T01-32-43.txt
.claude/: DECISION_FRAMEWORK.md  FABLE5_SAFETY_MATRIX.md  FRANK_DNA.md  RUNTIME_CHARTER.md  agent-iam.json  fable5-strategic-doctrine.md  hooks.json  proven-config.json  settings.json  skill-rules-v2.json  skill-rules.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  cleanup-queue.txt  dependabot.yml  pull_request_template.md
.swarm/: memory.db  schema.sql
adapters/: README.md
docs/: ACOS_MONITORING_GUIDE.md  ACOS_V11_MASTER_PLAN.md  AGENT_CONTRIBUTION_GUIDE.md  AGENT_REGISTRY.md  (+18 more)
tools/observatory/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
tools/observatory/src-tauri/capabilities/: default.json
tools/observatory/src-tauri/src/: main.rs
(+473 files in other folders)
